tests/checker/ok/multiline_method_call_args.can
Unit => Program {
    "hello"
        -> Joined("world")
        -> Print
}
