tests/checker/fail/deeply_nested_pipe_chain.can
Unit => Program {
    1 -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Sum(1) -> Print
}
